--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "author": "taystack",
   "license": "MIT",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc -p tsconfig.build.json",
     "start": "npx tsc --watch",
     "test": "yarn jest --collect-coverage"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^18.2.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.22.15",
+    "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/fetch-mock": "^7.3.6",
     "@types/jest": "^29.5.5",
@@ -23,7 +24,9 @@
     "concurrently": "^8.2.1",
     "fetch-mock-jest": "^1.5.1",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "node-fetch": "2",
+    "react": "^18.2.0",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
