--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@react-noui/external-store",
-  "version": "1.2.0",
+  "version": "2.0.0-alpha.5",
   "description": "Create external stores for your react projects",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": "taystack",
   "license": "MIT",
   "scripts": {
-    "build": "npx tsc -p tsconfig.build.json",
+    "build": "rimraf dist/* && npx tsc -p tsconfig.build.json",
     "start": "npx tsc --watch",
     "test": "yarn jest --collect-coverage"
   },
@@ -14,21 +15,24 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-react": "^7.23.3",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react-hooks": "^8.0.1",
-    "@types/fetch-mock": "^7.3.6",
-    "@types/jest": "^29.5.5",
+    "@types/fetch-mock": "^7.3.8",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.8.4",
     "@types/react": "^18.2.23",
     "concurrently": "^8.2.1",
     "fetch-mock-jest": "^1.5.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-websocket-mock": "^2.5.0",
     "node-fetch": "2",
     "react": "^18.2.0",
     "react-test-renderer": "^18.2.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
-  }
+    "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.3.3"
+  },
+  "packageManager": "yarn@4.1.0"
 }
