--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "@react-noui/external-store",
   "version": "2.0.0-alpha.5",
   "description": "Create external stores for your react projects",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "homepage": "https://github.com/react-noui/external-store/tree/master/docs/markdown/README.md",
   "author": "taystack",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf dist/* && npx tsc -p tsconfig.build.json",
+    "build": "npx ts-node ./scripts/build-lib.ts",
+    "build:docs": "npx ts-node ./scripts/build-docs.ts",
+    "build:tar": "npx ts-node ./scripts/pack-lib.ts",
     "start": "npx tsc --watch",
     "test": "yarn jest --collect-coverage"
   },
@@ -22,6 +25,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.8.4",
     "@types/react": "^18.2.23",
+    "chalk": "^4.1.2",
     "concurrently": "^8.2.1",
     "fetch-mock-jest": "^1.5.1",
     "jest": "^29.7.0",
@@ -32,6 +36,8 @@
     "react-test-renderer": "^18.2.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
+    "typedoc": "^0.25.8",
+    "typedoc-plugin-markdown": "^3.17.1",
     "typescript": "^5.3.3"
   },
   "packageManager": "yarn@4.1.0"
