--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-noui/external-store",
-  "version": "2.0.0-alpha.5",
+  "version": "2.0.0",
   "description": "Create external stores for your react projects",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
